--- a/sspi_flask_app/client/static/css/variables.css
+++ b/sspi_flask_app/client/static/css/variables.css
@@ -1,23 +1,26 @@
-:root {
-    --accent-color: rgb(41, 75, 80);
+.light-theme {
+    --accent-color-1: rgb(41, 75, 80);
     --link-color: rgb(0, 221, 255);
-    --dark-blue: #1B2A3C;
-    --light-blue: #2A4260;
+    --header-color: #1B2A3C;
+    --header-text-color: #F5F5F5;
+    --page-background: #F5F5F5;
     --green-accent: #AECC53;
-    --white: rgb(226, 226, 226);
     --grey: rgba(184, 188, 190, 1);
-    --black: rgb(42, 41, 43);
+    --text-color: #0A0A0A;
+    --low-importance-font-color: rgba(184, 188, 190, 1);
     --mobile-break-width: 1135px;
 }
 
-.dark-mode {
+.dark-theme {
     --accent-color: rgb(41, 75, 80);
     --link-color: rgb(0, 221, 255);
-    --dark-blue: #1B2A3C;
-    --light-blue: red;
+    --header-color: #16222E;
+    --header-text-color: #F5F5F5;
+    --page-background: #2A4260;
     --green-accent: #AECC53;
-    --white: rgb(226, 226, 226);
+    --text-color: rgb(226, 226, 226);
     --grey: rgba(184, 188, 190, 1);
-    --black: rgb(42, 41, 43);
+    --text-color: #F5F5F5;
+    --low-importance-font-color: rgba(184, 188, 190, 1);
     --mobile-break-width: 1135px;
 }
